# Aurora

./: .gitignore  README.md  pyproject.toml
data/: alpaca_gpt4_data_zh-clean.json  common_zh_70k.jsonl  convert_avatara_chat.py  convert_jsonl_to_json.py  dataset_info.json  read_data.py  sharegpt-70k.json
src/llmtuner/data/: loader.py
src/llmtuner/hparams/: data_args.py
src/llmtuner/model/: parser.py
src/llmtuner/train/: tuner.py
src/llmtuner/train/sft/: workflow.py
